--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <aside class="banner-left">
             <!-- 왼쪽 배너 광고 공간입니다. -->
             <div style="height: 600px; background-color: #ddd; display: flex; justify-content: center; align-items: center;">
-                좌측 배너 광고
+                좌측 사이드 배너 
             </div>
         </aside>
         
@@ -217,7 +217,7 @@
         <aside class="banner-right">
             <!-- 오른쪽 배너 광고 공간입니다. -->
             <div style="height: 600px; background-color: #ddd; display: flex; justify-content: center; align-items: center;">
-                우측 배너 광고
+                우측 사이드 배너
             </div>
         </aside>
     </div>
