--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                     <!-- 뉴스 섹션입니다. -->
                     <h2>최신 바둑 뉴스</h2>
                     <article>
-                        <h3><a href="#news1">신진서 9단, 응씨배 결승 진출</a></h3>
+                        <h3><a href="#news1">안성준 9단, 응씨배 결승 진출</a></h3>
                         <div class="image-placeholder">
-                            [이미지 설명: 신진서 9단이 깊은 생각에 잠겨 바둑판을 응시하고 있는 모습.]
+                            [이미지 설명: 안성준 9단이 깊은 생각에 잠겨 바둑판을 응시하고 있는 모습.]
                         </div>
-                        <p>한국의 신진서 9단이 중국의 커제 9단을 꺾고 응씨배 결승에 진출했습니다. 결승전은 다음 달 열릴 예정입니다.</p>
+                        <p>한국의 안성준 9단이 중국의 딩하오 9단을 꺾고 응씨배 결승에 진출했습니다. 결승전은 다음 달 열릴 예정입니다.</p>
                     </article>
                 </section>
 
@@ -168,7 +168,7 @@
                         <h3>자유게시판</h3>
                         <ul>
                             <li><a href="#post1">초보 바둑 공부법 추천해주세요</a></li>
-                            <li><a href="#post2">어제 본 프로기사의 묘수, 정말 대단했어요!</a></li>
+                            <li><a href="#post2">어제 본 안성준 9단의 묘수, 정말 대단했어요!</a></li>
                         </ul>
                     </div>
                 </section>
